# UdemyCourses

./: .gitignore  my.proto  test_get_fields.py
udemy_protobuf_dotnet/: .gitignore  .python-version  Arci .drawio  Dockerfile  README.md  docker-compose.yaml  groom_pb2.py  groom_pb2.pyi  groom_pb2_grpc.py  init  my.proto  my_pb2.pyi  pyproject.toml  requirements.txt  run_admin  run_client  run_client.sh  run_newsbot  run_server  tasks.py  test_gen_fields2.py  test_get_fields.py
udemy_protobuf_dotnet/.zellij/: dev.kdl
udemy_protobuf_dotnet/Dockerfile_bash/: client.sh  server.sh
udemy_protobuf_dotnet/_cs_sources/: GroomService_StartChat_tmpl.cs  GroomService_utils_methods.txt
udemy_protobuf_dotnet/_tom_tutorial_beetter_understand/: client.py  gen  main.py  server.py  watch
udemy_protobuf_dotnet/_tutor_authentication/: README.md
udemy_protobuf_dotnet/chat_client/: chat_client.py
udemy_protobuf_dotnet/groom_admin/: admin.py  monitor_chat.py
udemy_protobuf_dotnet/groomadmin/: admin.py  admin__bak__.py  monitor_chat.py
udemy_protobuf_dotnet/grpcweb_browser/: Dockerfile  client.js  envoy.local.yaml  envoy.yaml  gen_proto  groom.proto  groom_grpc_web_pb.js  groom_pb.js  index.html  nginx.conf  package-lock.json  package.json  webpack.config.js
udemy_protobuf_dotnet/js_newsbot/: package-lock.json
udemy_protobuf_dotnet/newsbot/: client.js  package.json
udemy_protobuf_dotnet/proto_output/: my_pb2.py
udemy_protobuf_dotnet/protos/: groom.proto  my.proto
udemy_protobuf_dotnet/src/: groom_client.py  groom_server.py
udemy_protobuf_dotnet/tests/: test_utils.py
(+31 files in other folders)
