[project]
name = "udemy-protobuf-dotnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "faker",
    "pytest",
    "ipython",
    "ipdb",
    "invoke",
    "watchfiles",
]
